<project xmlns="http://maven.apache.org/POM/4.0.0" 
		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
		 http://maven.apache.org/xsd/maven-4.0.0.xsd">

<modelVersion>4.0.0</modelVersion>

<groupId>com.project</groupId>
<artifactId>todo-app</artifactId>
<version>0.0.1-SNAPSHOT</version>
<packaging>jar</packaging>

<name>todo-app</name>
<url>http://maven.apache.org</url>

<properties>
	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	<maven.compiler.source>17</maven.compiler.source>
	<maven.compiler.target>17</maven.compiler.target>
	<sonar.organization>diogoleetao</sonar.organization>
	<sonar.projectKey>diogoleetao_todo-app</sonar.projectKey>
	<sonar.host.url>https://sonarcloud.io</sonar.host.url>
</properties>

<dependencies>
	<!-- JUnit 5 -->
	<dependency>
		<groupId>org.junit.jupiter</groupId>
		<artifactId>junit-jupiter</artifactId>
		<version>5.10.0</version>
		<scope>test</scope>
	</dependency>

	<!-- AssertJ -->
	<dependency>
		<groupId>org.assertj</groupId>
		<artifactId>assertj-core</artifactId>
		<version>3.25.3</version>
		<scope>test</scope>
	</dependency>

	<!-- AssertJ Swing -->
	<dependency>
		<groupId>org.assertj</groupId>
		<artifactId>assertj-swing-junit</artifactId>
		<version>3.17.1</version>
		<scope>test</scope>
	</dependency>

	<!-- Awaitility -->
	<dependency>
		<groupId>org.awaitility</groupId>
		<artifactId>awaitility</artifactId>
		<version>4.2.0</version>
		<scope>test</scope>
	</dependency>
	
	<!-- Testcontainers  -->
	<dependency>
		<groupId>org.testcontainers</groupId>
		<artifactId>testcontainers</artifactId>
		<version>1.20.4</version>
	<scope>test</scope>
	</dependency>
	<dependency>
		<groupId>org.testcontainers</groupId>
		<artifactId>junit-jupiter</artifactId>
		<version>1.20.4</version>
		<scope>test</scope>
	</dependency>
	
	<!-- PostgreSQL Container -->
	<dependency>
		<groupId>org.testcontainers</groupId>
		<artifactId>postgresql</artifactId>
		<version>1.20.4</version>
		<scope>test</scope>
	</dependency>
	<dependency>
		<groupId>org.postgresql</groupId>
		<artifactId>postgresql</artifactId>
		<version>42.7.3</version>
		<scope>test</scope>
	</dependency>
	
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-simple</artifactId>
		<version>2.0.7</version>
		<scope>test</scope>
	</dependency>
</dependencies>

<build>
	<plugins>
		<!-- JUnit 5 runner -->
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-surefire-plugin</artifactId>
			<version>3.2.5</version>
		</plugin>

		<!-- Run integration tests during verify -->
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-failsafe-plugin</artifactId>
			<version>3.1.2</version>
			<executions>
				<execution>
					<goals>
						<goal>integration-test</goal>
						<goal>verify</goal>
					</goals>
				</execution>
			</executions>
		</plugin>

		<!-- Build Helper -->
		<plugin>
			<groupId>org.codehaus.mojo</groupId>
			<artifactId>build-helper-maven-plugin</artifactId>
			<version>3.6.0</version>
			<executions>
				<execution>
					<id>add-test-source</id>
					<phase>generate-test-sources</phase>
					<goals>
						<goal>add-test-source</goal>
					</goals>
					<configuration>
						<sources>
							<source>src/it/java</source>
						</sources>
					</configuration>
				</execution>
			</executions>
		</plugin>

		<!-- SonarCloud -->
		<plugin>
			<groupId>org.sonarsource.scanner.maven</groupId>
			<artifactId>sonar-maven-plugin</artifactId>
			<version>3.10.0.2594</version>
		</plugin>

		<!-- JaCoCo for Code Coverage -->
		<plugin>
			<groupId>org.jacoco</groupId>
			<artifactId>jacoco-maven-plugin</artifactId>
			<version>0.8.11</version>
			<configuration>
				<excludes>
					<exclude>com/project/todo_app/App$*.changedUpdate*</exclude>
				</excludes>
			</configuration>
			<executions>
				<execution>
					<goals>
						<goal>prepare-agent</goal>
					</goals>
				</execution>
				<execution>
					<id>report</id>
					<phase>verify</phase>
					<goals>
						<goal>report</goal>
					</goals>
				</execution>
			</executions>
		</plugin>

		<!-- PIT for Mutation Testing (with JUnit 5 support) -->
		<plugin>
			<groupId>org.pitest</groupId>
			<artifactId>pitest-maven</artifactId>
			<version>1.15.2</version>
			<configuration>
				<targetClasses>
					<param>com.project.todo_app.TodoService</param>
					<param>com.project.todo_app.Todo</param>
					<param>com.project.todo_app.Tag</param>
				</targetClasses>
				<targetTests>
					<param>com.project.todo_app.TodoServiceTest</param>
					<param>com.project.todo_app.TagTest</param>
					<param>com.project.todo_app.TodoTest</param>
				</targetTests>
				<excludedClasses>
					<param>com.project.todo_app.App</param>
				</excludedClasses>
				<mutators>
					<mutator>DEFAULTS</mutator>
				</mutators>
				<mutationThreshold>100</mutationThreshold>
				<jvmArgs>
					<jvmArg>-Xmx2048m</jvmArg>
				</jvmArgs>
			</configuration>
			<dependencies>
				<dependency>
					<groupId>org.pitest</groupId>
					<artifactId>pitest-junit5-plugin</artifactId>
					<version>1.1.2</version>
				</dependency>
			</dependencies>
		</plugin>
	</plugins>
</build>
</project>
